# wonder_dash

./: .context  .envrc  .gitignore  CHANGELOG.md  Dockerfile  GEMINI.md  LICENSE  README.md  __init__.py  cli.py  dashboard.py  pyproject.toml  test_ascii.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml  publish.yml
docs/: architecture.md  config.md  developer-guide.md  usage.md
docs/api/: cli.md  config.md  dashboard.md  hub.md  hub_utils.md  wizard.md
src/wonder_dash/: __init__.py  ascii_art.py  cli.py  config.py  dashboard.py  hub.py  hub_utils.py  wizard.py
