
[project]
name = "wonder-dash"
version = "0.1.0"
description = "WonderDash terminal dashboards"
authors = [{name = "WonderDash"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "boto3",
  "rich"
]

[project.scripts]
wonder-dash = "wonder_dash.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
