
[project]
name = "wonder-dash"
version = "0.1.1"
description = "Terminal dashboard for AWS CloudFront and core services monitoring"
authors = [{name = "Jonathan Schimpf", email = "jon@theatrico.org"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["aws", "cloudfront", "monitoring", "dashboard", "cli", "devops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "boto3>=1.26.0",
  "rich>=13.0.0"
]

[project.urls]
Homepage = "https://github.com/mjfxjas/wonder_dash"
Repository = "https://github.com/mjfxjas/wonder_dash.git"
Issues = "https://github.com/mjfxjas/wonder_dash/issues"

[project.scripts]
wonder-dash = "wonder_dash.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
